# CoverArtEditor

./: .gitignore  CoverArtEditor.html  LICENSE  README.md  index.html  main.js  package-lock.json  package.json  preload.js
libs-electron/: browser-id3-writer.min.js
scripts/: generate-icon.js
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  search.rs
